# spoof_detect_recodecpp

./: CMakeLists.txt  README.md  dev_log.txt  features.cpp  features.h  test_features.cpp
cv_test/: CMakeLists.txt  cvtest.cpp
debug/: CMakeLists.txt  features.cpp  svm_tools.cpp  test_features.cpp  test_svm_tools.cpp
debug/include/: features.h  svm_tools.h
preprocess/: data_prepro.py  preproc_test.ipynb
preprocess/.ipynb_checkpoints/: preproc_test-checkpoint.ipynb
preprocess/nets/: onet.py  pnet.py  rnet.py
preprocess/tools/: __init__.py  detect.py
release/: CMakeLists.txt  features.cpp  getfeatures.cpp
release/include/: features.h
src_py/: capture_test.py  features.py  test_get_context_feature.ipynb
src_py/.ipynb_checkpoints/: test_get_context_feature-checkpoint.ipynb
